syntax = 'proto3';
import "google/protobuf/timestamp.proto";

// Log in request for Subscriber and Librarian
message LogInRequest {
  oneof User {
    Subscriber subscriber = 1;
    Librarian librarian = 2;
  }
}

message LogInResponse {
  oneof User {
    SubscriberWithBooks subscriber = 1;
    Librarian librarian = 2;
    string errorMessage = 3;
  }
}

message Subscriber {
  int32 id = 1;
  string username = 2;
  string name = 3;
  string address = 4;
  string tel = 5;
  string password = 6;
}

message SubscriberWithBooks {
  int32 id = 1;
  string username = 2;
  string name = 3;
  string address = 4;
  string tel = 5;
  string password = 6;
  repeated Book books = 7;
}

message Librarian {
  int32 id = 1;
  string username = 2;
  string password = 3;
}

message Book {
  int32 id = 1;
  string author = 2;
  google.protobuf.Timestamp date_borrowed = 3;
  string name = 4;
  enum Status{
      Borrowed = 0;
      Returned = 1;
  }
  Status status = 5;
  enum Genre{
      Action = 0;
      Drama = 1;
      Adventure = 2;
      Other = 3;
  }
  Genre genre = 6;
  int32 numberOfReviews = 7;
  float review = 8;
  google.protobuf.Timestamp date_to_return = 9;
}

message GetAllBooksRequest {}
message GetAllBooksResponse {
  repeated Book books = 1;
}

message AddSubscriberResponse {
  oneof response {
    int32 good = 1;
    string errorMessage = 2;
  }
}

message BorrowBookRequest {
  int32 idSubscriber = 2;
  int32 idBook = 1;
}

message BasicResponse {
  oneof response {
    int32 doneSuccessfully = 1;
    string errorMessage = 2;
  }
}

service LibraryService {
  rpc LogIn(LogInRequest) returns (LogInResponse) {}
  rpc AddSubscriber(Subscriber) returns (AddSubscriberResponse) {}
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse) {}
  rpc BorrowBook(BorrowBookRequest) returns (BasicResponse) {}
  rpc AddBook(Book) returns (BasicResponse) {}
  rpc UpdateBook(Book) returns (BasicResponse) {}
  rpc DeleteBook(Book) returns (BasicResponse) {}
  rpc ExtendLoan(Book) returns (BasicResponse) {}
}